Clean up specification apis